# VMCR

./: .gitignore  .gitmodules  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  LICENSE  NOTICE  README.md  ROADMAP.md  commit_msg.txt  next_steps.md  settings.gradle.kts
.github/workflows/: build-apk.yml  ci.yml
app/: README.md  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mio/plugin/renderer/: MainActivity.java
app/src/main/java/com/mio/plugin/renderer/vmcr/: VMCRPluginActivity.java
app/src/main/java/io/anomalyco/vmcr/: VMCRPluginActivity.java
app/src/main/res/values/: strings.xml
cmake/: FindVulkan.cmake  Options.cmake  toolchain-ndk-aarch64.cmake
configs/: custom_renderer.json  vulkan_features.json
configs/shader_packs/: sm8635.json
docs/: GTNH_LIMITATIONS.md  PHASE0_CHECKLIST.md  V1_FAILURE_SUMMARY.md  VMCR_V2_GLES32.md  fallback_matrix.md  iris_compat.md  performance_sm8635.md
docs/devices/: sm8635.md
gradle/: libs.versions.toml
include/vmcr/: backend.h  backend_router.h  dl.h  egl_types.h  export.h  gl_safe.h  gles_types.h  log.h  vendor_egl.h  vendor_gl.h  vk_hpp.h  vk_probe.h  vk_renderer.h
scripts/: build_android.ps1  build_android.sh  build_host.bat  build_ndk.bat  compile_shaders.sh  deploy_to_device.sh  parse_vkjson.py
src/fabric_mod/: build.gradle  gradle.properties  settings.gradle
src/fabric_mod/src/main/java/io/anomalyco/vmcr/: VMCRMixin.java
src/fabric_mod/src/main/java/io/anomalyco/vmcr/jni/: NativeBridge.java
src/fabric_mod/src/main/java/io/anomalyco/vmcr/mixin/client/: BufferBuilderMixin.java  LevelRendererMixin.java
src/fabric_mod/src/main/resources/: fabric.mod.json  vmcr.mixins.json
src/main/cpp/core/: CMakeLists.txt  backend_common.cpp  backend_factory.cpp  backend_router.cpp
src/main/cpp/egl/: CMakeLists.txt  egl_api.cpp  egl_internal.cpp  egl_internal.h
src/main/cpp/gles/: CMakeLists.txt  crash_handler.cpp  gl_state.cpp  gl_state.h  gles_entry.cpp  gles_renderer.cpp  gles_renderer_stub.cpp
src/main/cpp/jni/: CMakeLists.txt  jni_bridge.cpp  jni_chunk_stream.cpp
src/main/cpp/loader/: CMakeLists.txt  android_dlopen.cpp  dlsym_vendor.cpp  egl_entry.cpp  gl_entry.cpp  loader_stub.cpp  vmcr_init.cpp
src/main/cpp/platform/: CMakeLists.txt  android_logger.cpp
src/main/cpp/vulkan/: CMakeLists.txt  vk_device.cpp  vk_renderer.cpp  vk_renderer_hpp.cpp  vk_swapchain.cpp  vmcr_probe.cpp
src/shaders/: README.md  chunk.frag  chunk.vert
src/shaders/post/: tonemap.comp
tests/unit/: CMakeLists.txt  test_backend.cpp  test_main.cpp  test_vk_probe.cpp
tools/vmcr_probe_tool/: CMakeLists.txt  main.cpp
