# ===========================================================================
# tools/vmcr_probe_tool/CMakeLists.txt
# з‹¬з«‹ Vulkan жЋўжµ‹е·Ґе…· - дё»жњєдѕ§жћ„пїЅ? и®ѕе¤‡пїЅ?adb push еђЋиїђпїЅ?# ===========================================================================
add_executable(vmcr_probe_tool main.cpp)

target_link_libraries(vmcr_probe_tool PRIVATE vmcr_vulkan)

# е°ќиЇ•жџҐж‰ѕзі»з»џ Vulkan (дё»жњєдѕ§)
find_package(Vulkan QUIET)
if(Vulkan_FOUND)
    target_link_libraries(vmcr_probe_tool PRIVATE Vulkan::Vulkan)
    message(STATUS "vmcr_probe_tool: linking against system Vulkan")
else()
    message(WARNING "vmcr_probe_tool: Vulkan not found on host, will fail at runtime")
endif()
