# ===========================================================================
# src/main/cpp/jni/CMakeLists.txt
# JNI 妗?- Phase 3 瀹炵幇瀹屾暣鍔熻兘
# ===========================================================================
add_library(vmcr_jni SHARED
    jni_bridge.cpp
    jni_chunk_stream.cpp)

target_compile_features(vmcr_jni PUBLIC cxx_std_20)
target_link_libraries(vmcr_jni
    PRIVATE  vmcr_core
    PUBLIC   android log)

# JNI 绗﹀彿蹇呴』 default 鍙
set_target_properties(vmcr_jni PROPERTIES
    C_VISIBILITY_PRESET   default
    CXX_VISIBILITY_PRESET default)
