# ===========================================================================
# src/main/cpp/loader/CMakeLists.txt
#
# дә§зү©: libGL.so (иў?FCL еҪ“дҪң OpenGL ES еә“еҠ иҪ?
# жҡҙйңІ: glClear, glDrawElements, ... е…ЁйғЁ GLES 3.2 е…ҘеҸЈ
#       JNI_OnLoad, JNI_OnUnload
# ===========================================================================
add_library(vmcr_loader SHARED
    gl_entry.cpp
    vmcr_init.cpp
    dlsym_vendor.cpp
    android_dlopen.cpp)

target_compile_features(vmcr_loader PUBLIC cxx_std_20)
target_include_directories(vmcr_loader PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(vmcr_loader
    PRIVATE  vmcr_core
    PUBLIC   android log)

# е…ій”®: иҫ“еҮәеҗҚеҝ…йЎ»жҳҜ libGL.so
set_target_properties(vmcr_loader PROPERTIES
    OUTPUT_NAME "GL"
    PREFIX "lib"
    C_VISIBILITY_PRESET   default
    CXX_VISIBILITY_PRESET default)

# еҜјеҮә GL з¬ҰеҸ·
target_compile_definitions(vmcr_loader PRIVATE VMCR_EXPORTS_GLSYMS=1)
